Fix bug custom macro field on dark mode

--- a/www/Themes/Centreon-Dark/variables.css
+++ b/www/Themes/Centreon-Dark/variables.css
@@ -208,4 +208,6 @@
     --success-message-background-color: var(--up-to-date-background-color);
     --success-message-font-color: var(--up-to-date-border-color);
     --success-message-border-color: var(--up-to-date-color);
+    --custom-macros-placeholder-font-color: var(--color-black);
+    --custom-macros-font-color: var(--color-white);
 }
