--- a/www/Themes/Generic-theme/Variables-css/variables.css
+++ b/www/Themes/Generic-theme/Variables-css/variables.css
@@ -796,4 +796,7 @@
     /* Gorgone variables */
     --gorgone-config-file-font-color: var(--color-black);
     --gorgone-config-file-background-color: var(--body-background);
+    /* Custom macros variables */
+    --custom-macros-placeholder-font-color: var(--color-white);
+    --custom-macros-font-color: var(--color-black);
 }
